docs/pss-inventory/retrieved-mdapi/unpackaged/objects/sfsp__SalesNodeRule__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sfsp__BooleanFilter__c</fullName>
        <label>Boolean Filter</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sfsp__FilterLogic__c</fullName>
        <label>Filter Logic</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>all</fullName>
                    <label>All</label>
                </value>
                <value>
                    <fullName>any</fullName>
                    <label>Any</label>
                </value>
                <value>
                    <fullName>custom</fullName>
                    <label>Custom</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfsp__SalesAssignmentObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Assignment Object</label>
        <referenceTo>sfsp__SalesAssignmentObject__c</referenceTo>
        <relationshipLabel>Sales Node Rules</relationshipLabel>
        <relationshipName>SalesNodeRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesNodeBoundary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Node Boundary</label>
        <referenceTo>sfsp__SalesNodeBoundary__c</referenceTo>
        <relationshipLabel>Sales Node Rules</relationshipLabel>
        <relationshipName>SalesNodeRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesNode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Node</label>
        <referenceTo>sfsp__SalesNode__c</referenceTo>
        <relationshipLabel>Sales Node Rules</relationshipLabel>
        <relationshipName>SalesNodeRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Node Rule</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Node Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>